# inspire_hand_ws

./: .gitignore  .gitmodules  hand_ftp.md  readme.md  readmeCN.md  requirements.txt  update_bin_files.py  update_venv_path.py
inspire_hand_sdk/: CMakeLists.txt  readme.md  setup.py
inspire_hand_sdk/cpp_example/: Hand_dds_example.cpp
inspire_hand_sdk/example/: Headless_driver.py  Headless_driver_485.py  Headless_driver_485_double.py  Headless_driver_485_l.py  Headless_driver_485_r.py  Headless_driver_double.py  Headless_driver_l.py  Headless_driver_r.py  Vision_driver.py  Vision_driver_485.py  Vision_driver_485_l.py  Vision_driver_485_r.py  Vision_driver_double.py  control.py  dds_publish.py  dds_subscribe.py  dds_subscribe_485.py  dds_subscribe_485_l.py  dds_subscribe_485_r.py  drive.py  init_set_inspire_hand.py  init_set_inspire_hand_485.py
inspire_hand_sdk/hand_idl/: inspire_hand_ctrl.cpp  inspire_hand_ctrl.hpp  inspire_hand_ctrl.idl  inspire_hand_state.cpp  inspire_hand_state.hpp  inspire_hand_state.idl  inspire_hand_touch.cpp  inspire_hand_touch.hpp  inspire_hand_touch.idl
inspire_hand_sdk/inspire_sdkpy/: __init__.py  inspire_hand_defaut.py  inspire_sdk.py  inspire_sdk_double.py  qt_tabs.py
inspire_hand_sdk/inspire_sdkpy/inspire_dds/: __init__.py  _inspire_hand_ctrl.py  _inspire_hand_state.py  _inspire_hand_touch.py
